=== 4.6.0 (2014-01-02)

* Add Database#call_mssql_sproc on MSSQL for calling stored procedures and handling output parameters (jrgns, jeremyevans) (#748)

* Handle RuntimeErrors raised by oci8 in the oracle adapter (jeremyevans)

* Support OFFSET/FETCH on Microsoft SQL Server 2012 (jeremyevans)

* Support :server option for Database#{commit,rollback}_prepared_transaction on PostgreSQL, MySQL, and H2 (jeremyevans) (#743)

* Do not attempt to eager load and raise an exception when doing Model.eager(...).naked.all (jeremyevans)

* Recognize a couple additional disconnect errors in the jdbc/postgresql adapter (jeremyevans) (#742)

=== 4.5.0 (2013-12-02)

* Support :on_commit=>(:drop|:delete_rows|:preserve_rows) options when creating temp tables on PostgreSQL (rosenfeld) (#737)

* Make Dataset#insert work on PostgreSQL if the table name is a SQL::PlaceholderLiteralString (jeremyevans) (#736)

* Copy unique constraints when emulating alter_table operations on SQLite (jeremyevans) (#735)

* Don't return clob column values as SQL::Blob instances in the db2 and ibmdb adapters unless use_clob_as_blob is true (jeremyevans)

* Make use_clob_as_blob false by default on DB2 (jeremyevans)

* Fix usage of Sequel::SQL::Blob objects as prepared statement arguments in jdbc/db2 adapter when use_clob_as_blob is false (jeremyevans)

* Add mssql_optimistic_locking plugin, using a timestamp/rowversion column to protect against concurrent updates (pinx, jeremyevans) (#731)

* Make Model.primary_key array immutable for composite keys (chanks) (#730)

=== 4.4.0 (2013-11-01)

* Make Database#tables not show tables in the recycle bin on Oracle (jeremyevans) (#728)

* Don't automatically order on all columns when emulating offsets for unordered datasets on DB2 (jeremyevans)

* Improve PostgreSQL type support in the jdbc/postgresql adapter (jeremyevans)

* Make offset emulation on Oracle work when using columns that can't be ordered (jeremyevans, sdeming) (#724, #725)
